cluster/infrastructure/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-gateway
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: home-gateway
  namespace: gateway-system
spec:
  gatewayClassName: envoy-gateway
  addresses:
    - type: IPAddress
      value: 192.168.178.240
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.home.lan"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: home-lan-tls
      allowedRoutes:
        namespaces:
          from: All
